# RBOT-tracking

./: CMakeLists.txt  poses_first.txt  poses_second.txt  predicted_cube.txt  predicted_poses_ape.txt  predicted_poses_ape_light.txt  predicted_poses_ape_noisy.txt  predicted_poses_ape_occ.txt  predicted_poses_ape_occ1.txt  predicted_poses_ape_regular.txt  predicted_poses_bakingsoda_regular.txt  predicted_poses_bd_light.txt  predicted_poses_bd_noisy.txt  predicted_poses_bd_occ.txt  predicted_poses_bd_occ1.txt  predicted_poses_bd_regular.txt  predicted_poses_benchviseblue.txt  predicted_poses_bs.txt  predicted_poses_bs_light.txt  predicted_poses_bs_noisy.txt  predicted_poses_bs_occ.txt  predicted_poses_bs_occ1.txt  predicted_poses_bs_regular.txt  predicted_poses_bv_light.txt  predicted_poses_bv_noisy.txt  predicted_poses_bv_occ.txt  predicted_poses_bv_occ1.txt  predicted_poses_bv_regular.txt  predicted_poses_cam_light.txt  predicted_poses_cam_noisy.txt  predicted_poses_cam_occ1.txt  predicted_poses_cam_regular.txt  predicted_poses_can_occ1.txt  predicted_poses_can_regular.txt  predicted_poses_cat.txt  predicted_poses_cat1.txt  predicted_poses_cat_light.txt  predicted_poses_cat_noisy.txt  predicted_poses_cat_occ1.txt  predicted_poses_cat_regular.txt  (+55 more)
data/: can_simple.obj.mtl  cat_simple.obj.mtl
src/: calibration.cpp  compare_obj_ply.cpp  cube_tracking.cpp  main.cpp  test.cpp  test2.cpp
